--- a/index.html
+++ b/index.html
@@ -1,2 +1,1 @@
-“Be who you are and say what you feel, because those who mind don't matter and those who matter don't mind.”
-“You're braver than you believe, and stronger than you seem, and smarter than you think.”
+<h1>“Be who you are and say what you feel, because those who mind don't matter and those who matter don't mind.”</h1>
